# TorSearch

./: .gitignore  Cargo.toml  README.md
data/: torsearch.db
design/: api.md  sqlite-ddl.sql
design/migrations/: 001_add_victim_unique.sql
design/templates/: group_detail.md  victim_detail.md
src/: main.rs  sync.rs
src/db/: group.rs  location.rs  mod.rs  ransom_note.rs  victim.rs
