[package]
name = "torsearch"
version = "0.1.0"
edition = "2024"
description = "ランサムウェアグループの.onionサイトと被害者情報を収集・監視するツール"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
urlencoding = "2"
